--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
+# Allow package-lock.json files for reproducible builds
+# package-lock.json
 
 # Build outputs
 dist/
