Configure docs to use local package build during development
- Update InteractiveCode component to try local build first, fallback to npm
- Add predev/prebuild scripts to build local package automatically
- Add build-local-package.sh script that gracefully handles missing Rust/wasm-pack
- Ensures docs use latest local changes during development while maintaining npm fallback

--- a/docs/package.json
+++ b/docs/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
+    "predev": "bash scripts/build-local-package.sh",
     "dev": "vitepress dev .",
+    "prebuild": "bash scripts/build-local-package.sh",
     "build": "vitepress build .",
     "preview": "vitepress preview .",
     "docs:api": "typedoc --options typedoc.json",
