feat(stat-core): add advanced histogram binning and regression improvements
Histogram enhancements:
- Add histogram_edges_clamped for clamping values to first/last bin
- Add BinningRule enum (FreedmanDiaconis, Scott, SqrtN)
- Add bin_edges_fixed_width for linear spacing
- Add bin_edges_equal_frequency for quantile-based binning
- Add bin_edges_auto for automatic binning selection
- Add histogram_*_with_edges variants returning edges with counts
- Add histogram_auto_with_edges_collapse_tails for tail collapsing

Regression improvements:
- Add RegressionCoeffs/RegressionCoeffsF32 for coefficients-only results
- Add regress_naive/regress_simd/regress_kernels variants
- Add regress_*_coeffs variants for lower overhead
- Add residuals_into for in-place residual calculation
- Add f32 SIMD support for WASM (wasm32 SIMD intrinsics)

Benchmarks:
- Add regression benchmark variants (ndarray, faer, SIMD)
- Add diabetes dataset benchmarks (10K/100K points)
- Remove unused num-traits and statistical deps
- Add faer for benchmark comparisons

--- a/crates/stat-core/Cargo.toml
+++ b/crates/stat-core/Cargo.toml
@@ -10,9 +10,7 @@ name = "stat_core"
 crate-type = ["lib"]
 
 [dependencies]
-num-traits = "0.2"
 wide = "0.7"
-statistical = "1.0"
 statrs = { version = "0.18", default-features = false }
 
 [dev-dependencies]
@@ -20,6 +18,7 @@ criterion = { version = "0.5", features = ["html_reports"] }
 approx = "0.5"
 ndarray = "0.16"
 ndarray-stats = "0.6"
+faer = "0.21"
 
 [[bench]]
 name = "stats_bench"
