build(js): update generated WASM bindings and package versions
- Update stat_wasm.d.ts with new function signatures
- Update stat_wasm_bg.js with new bindings
- Bump pkg versions from 0.3.0 to 0.4.0

--- a/js/package/pkg/stat-wasm/package.json
+++ b/js/package/pkg/stat-wasm/package.json
@@ -2,7 +2,7 @@
   "name": "stat-wasm",
   "type": "module",
   "collaborators": [
-    "Your Name <you@example.com>"
+    "addmaple"
   ],
   "version": "0.1.0",
   "license": "MIT",
