--- a/js/package/pkg/stat-wasm-correlation/package.json
+++ b/js/package/pkg/stat-wasm-correlation/package.json
@@ -2,7 +2,7 @@
   "name": "stat-wasm-correlation",
   "type": "module",
   "collaborators": [
-    "Your Name <you@example.com>"
+    "addmaple"
   ],
   "version": "0.1.0",
   "license": "MIT",
