--- a/js/package/package.json
+++ b/js/package/package.json
@@ -59,6 +59,11 @@
       "import": "./dist/tests.js",
       "require": "./dist/tests.js",
       "types": "./dist/tests.d.ts"
+    },
+    "./shared": {
+      "import": "./dist/shared.js",
+      "require": "./dist/shared.js",
+      "types": "./dist/shared.d.ts"
     }
   },
   "scripts": {
@@ -67,6 +72,8 @@
     "build:wasm:full": "RUSTFLAGS=\"-C target-feature=+simd128\" wasm-pack build ../../crates/stat-wasm --target bundler --out-dir pkg",
     "dev": "tsc --watch",
     "test": "node --test dist/**/*.test.js",
+    "size:check": "node scripts/check-bundle-size.js",
+    "size:update": "node scripts/check-bundle-size.js --update-baseline",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
