--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,7 @@
     "predev": "bash scripts/build-local-package.sh",
     "dev": "vitepress dev .",
     "prebuild": "bash scripts/build-local-package.sh",
-    "build": "vitepress build .",
+    "build": "npm run docs:api && npm run docs:functions && vitepress build .",
     "preview": "vitepress preview .",
     "docs:api": "typedoc --options typedoc.json",
     "docs:functions": "node scripts/generate-function-pages.js",
@@ -14,6 +14,7 @@
     "docs:serve": "vitepress preview docs"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "typedoc": "^0.25.0",
     "typedoc-plugin-markdown": "^3.17.0",
     "vite-plugin-wasm": "^3.5.0",
