--- a/docs/package.json
+++ b/docs/package.json
@@ -20,9 +20,10 @@
     "typedoc": "^0.25.0",
     "typedoc-plugin-markdown": "^3.17.0",
     "vite-plugin-wasm": "^3.5.0",
-    "vitepress": "^1.0.0"
+    "vitepress": "^1.0.0",
+    "wasm-feature-detect": "^1.5.0"
   },
   "dependencies": {
-    "@addmaple/stats": "^0.1.1"
+    "@addmaple/stats": "^0.2.4"
   }
 }
