--- a/docs/package.json
+++ b/docs/package.json
@@ -14,16 +14,8 @@
     "docs:serve": "vitepress preview docs",
     "test": "playwright test"
   },
-  "devDependencies": {
-    "@playwright/test": "^1.40.0",
-    "@types/node": "^25.0.3",
-    "typedoc": "^0.25.0",
-    "typedoc-plugin-markdown": "^3.17.0",
-    "vite-plugin-wasm": "^3.5.0",
-    "vitepress": "^1.0.0",
-    "wasm-feature-detect": "^1.5.0"
-  },
   "dependencies": {
-    "@addmaple/stats": "^0.2.4"
+    "@addmaple/stats": "^0.2.4",
+    "wasm-feature-detect": "^1.5.0"
   }
 }
