--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -9,7 +9,11 @@
     "skipLibCheck": true,
     "strict": false,
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "wasm-feature-detect": ["./node_modules/wasm-feature-detect"]
+    }
   },
   "include": [
     "../js/package/src/**/*"
