--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -133,10 +133,12 @@ jobs:
             ${{ runner.os }}-cargo-audit-
 
       - name: Install cargo-audit
-        run: cargo install cargo-audit
+        run: cargo install cargo-audit --locked
 
       - name: Run security audit
-        run: cargo audit --deny warnings
+        run: |
+          cargo generate-lockfile
+          cargo audit --deny warnings
 
   bundle-size:
     name: Bundle Size Check
