--- a/js/package/package.json
+++ b/js/package/package.json
@@ -27,7 +27,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/addmaple/stats.git"
+    "url": "git+https://github.com/addmaple/stats.git"
   },
   "exports": {
     ".": {
