--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -136,7 +136,14 @@ jobs:
             ${{ runner.os }}-cargo-audit-
 
       - name: Install cargo-audit
-        run: cargo install cargo-audit --locked
+        run: |
+          if ! command -v cargo-audit &> /dev/null; then
+            CARGO_AUDIT_VERSION="0.22.0"
+            ARCH="x86_64-unknown-linux-gnu"
+            curl -L "https://github.com/rustsec/rustsec/releases/download/cargo-audit%2Fv${CARGO_AUDIT_VERSION}/cargo-audit-${CARGO_AUDIT_VERSION}-${ARCH}.tar.gz" | tar xz
+            sudo mv cargo-audit-${CARGO_AUDIT_VERSION}-${ARCH}/cargo-audit ~/.cargo/bin/
+            chmod +x ~/.cargo/bin/cargo-audit
+          fi
 
       - name: Run security audit
         run: |
