--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -140,9 +140,11 @@ jobs:
           if ! command -v cargo-audit &> /dev/null; then
             CARGO_AUDIT_VERSION="0.22.0"
             ARCH="x86_64-unknown-linux-gnu"
-            curl -L "https://github.com/rustsec/rustsec/releases/download/cargo-audit%2Fv${CARGO_AUDIT_VERSION}/cargo-audit-${CARGO_AUDIT_VERSION}-${ARCH}.tar.gz" | tar xz
-            sudo mv cargo-audit-${CARGO_AUDIT_VERSION}-${ARCH}/cargo-audit ~/.cargo/bin/
+            curl -L "https://github.com/rustsec/rustsec/releases/download/cargo-audit%2Fv${CARGO_AUDIT_VERSION}/cargo-audit-${ARCH}-v${CARGO_AUDIT_VERSION}.tgz" | tar xz
+            mkdir -p ~/.cargo/bin
+            mv cargo-audit-${ARCH}-v${CARGO_AUDIT_VERSION}/cargo-audit ~/.cargo/bin/
             chmod +x ~/.cargo/bin/cargo-audit
+            echo "$HOME/.cargo/bin" >> $GITHUB_PATH
           fi
 
       - name: Run security audit
