--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -36,6 +36,12 @@ jobs:
       - name: Install wasm32 target
         run: rustup target add wasm32-unknown-unknown
       
+      - name: Install wasm-opt
+        run: |
+          curl -L https://github.com/WebAssembly/binaryen/releases/download/version_125/binaryen-125-x86_64-linux.tar.gz | tar xz
+          sudo mv binaryen-125/bin/wasm-opt /usr/local/bin/
+          wasm-opt --version
+      
       - name: Install wasm-pack
         uses: jetli/wasm-pack-action@v0.4.0
 
