--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,9 +78,15 @@ jobs:
       
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
-
+      
       - name: Install wasm32 target
         run: rustup target add wasm32-unknown-unknown
+      
+      - name: Install wasm-opt
+        run: |
+          curl -L https://github.com/WebAssembly/binaryen/releases/download/version_125/binaryen-version_125-x86_64-linux.tar.gz | tar xz
+          sudo mv binaryen-version_125/bin/wasm-opt /usr/local/bin/
+          wasm-opt --version
       
       - name: Install wasm-pack
         uses: jetli/wasm-pack-action@v0.4.0
@@ -170,6 +176,12 @@ jobs:
 
       - name: Install wasm32 target
         run: rustup target add wasm32-unknown-unknown
+      
+      - name: Install wasm-opt
+        run: |
+          curl -L https://github.com/WebAssembly/binaryen/releases/download/version_125/binaryen-version_125-x86_64-linux.tar.gz | tar xz
+          sudo mv binaryen-version_125/bin/wasm-opt /usr/local/bin/
+          wasm-opt --version
       
       - name: Install wasm-pack
         uses: jetli/wasm-pack-action@v0.4.0
