perf: switch from -Oz to -O3 for WASM optimization
After investigation, found that -Oz and -O3 produce identical gzipped
sizes (~18.63 KB), so there's no size benefit to -Oz. Since -O3
optimizes for performance, it's the better choice.

Verified:
- Gzipped sizes are identical (18.63 KB for both)
- -O3 prioritizes runtime performance
- -Oz may have slight performance penalty with no size benefit

This ensures optimal performance while maintaining the same bundle size.

--- a/crates/stat-wasm-correlation/wasm-bindgen-lite.config.json
+++ b/crates/stat-wasm-correlation/wasm-bindgen-lite.config.json
@@ -7,9 +7,18 @@
     "simd": true
   },
   "js": {
-    "emit": ["node", "browser", "inline"],
+    "emit": [
+      "node",
+      "browser",
+      "inline"
+    ],
     "custom": "src/wrapper.js"
   },
-  "exports": []
+  "exports": [],
+  "wasmOpt": {
+    "mode": "on",
+    "args": [
+      "-O3"
+    ]
+  }
 }
-
