--- a/crates/stat-wasm-distributions/wasm-bindgen-lite.config.json
+++ b/crates/stat-wasm-distributions/wasm-bindgen-lite.config.json
@@ -7,9 +7,18 @@
     "simd": true
   },
   "js": {
-    "emit": ["node", "browser", "inline"],
+    "emit": [
+      "node",
+      "browser",
+      "inline"
+    ],
     "custom": "src/wrapper.js"
   },
-  "exports": []
+  "exports": [],
+  "wasmOpt": {
+    "mode": "on",
+    "args": [
+      "-O3"
+    ]
+  }
 }
-
